# pre-commit-llm-code-review

./: .pre-commit-hooks.yaml  CHANGELOG.md  README.md  code_review.py  pyproject.toml  requirements.in  requirements.txt
hooks/: code_review.py
