[project]
name = "llm-code-review"
requires-python = ">=3.12"
version = "1.0.7"
license = "GPL-3.0"
dependencies = [
  "absl-py",
  "langchain[google-genai]",
  "langchain-ollama",
  "rich",
]

[project.scripts]
llm-code-review = "hooks.code_review:entrypoint"

[tool.setuptools]
packages = ["hooks"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
